--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.13.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/config-plugins": "^10.0.2",
     "@expo/vector-icons": "^14.1.0",
