--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.50.0",
+    "@tanstack/react-query": "^5.80.6",
     "expo": "^53.0.10",
     "expo-apple-authentication": "^7.2.4",
     "expo-auth-session": "^6.2.0",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "supabase": "^2.24.3",
     "typescript": "~5.8.3"
   }
 }
