--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "i18next": "^23.7.8",
     "lucide-react-native": "^0.513.0",
     "openai": "^5.1.1",
+    "phosphor-react-native": "^2.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^13.5.0",
@@ -64,6 +65,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "expo-module-scripts": "^4.1.7",
     "supabase": "^2.24.3",
     "typescript": "~5.8.3"
   }
